# YouTutorial

./: CMakeLists.txt  README.md  datain.txt  main.cpp
DV/: dv.cpp  dv.h
GUI/: AdminGUI.cpp  AdminGUI.h  QtMenu.cpp  QtMenu.h  UserGUI.cpp  UserGUI.h
Repository/: repo.cpp  repo.h
Service/: a_service.cpp  a_service.h  user_service.cpp  user_service.h
Ui/: ui.cpp  ui.h
domain/: tutorial.cpp  tutorial.h
errors/: ValidError.cpp  ValidError.h
tests/: test.cpp  test.h
undo_redo/: action.cpp  action.h  undo_redo.cpp  undo_redo.h
validator/: TutorialValidator.cpp  TutorialValidator.h
